# FlipPageDetectorCNNAzure

./: .gitignore  README.md  conda.yaml  condaprueba.yaml  deployment_config.json  predictions.csv  pyproject.toml  requirements_prueba.txt  traffic_config.json
src/: mlflow_load_model.py  mlflow_model_loader.py
