[tool.poetry]
name = "project4monreader"
version = "0.1.0"
description = ""
authors = ["Rubén Chuliá Mena <rubchume@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
jupyterlab = "^3.6.3"
plotly = "^5.14.1"
pandas = "^2.0.1"
pillow = "^9.5.0"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
ipywidgets = "^8.0.6"
jupyterlab-widgets = "^3.0.7"
torch = "2.0.1"
torchvision = "0.15.2"
pytorch-lightning = "^2.0.2"
tensorboard = "^2.13.0"
scikit-learn = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
